fix: 🐛 Table heavy row data is too long not to be displayed

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
 body {
   padding-top: 20px !important;
 }
+
+table td {
+  word-break: break-all;
+}
